--- a/index.html
+++ b/index.html
@@ -1,45 +1,78 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Start Vue.js v1.0</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="grid12.css">
     <style>
-      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-      @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-      @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-
-      body { font-family: 'Droid Serif'; }
+      body { font-family: 'yutaCoco'; }
       h1, h2, h3 {
-        font-family: 'Yanone Kaffeesatz';
+        font-family: 'yutaCoco';
         font-weight: normal;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+      .remark-slide-content {
+        font-size: 2rem;
+        padding-left: 50px;
+        padding-right: 50px;
+      }
+      .remark-code, .remark-inline-code { font-family: 'Ricty';font-size: 1rem; }
+      .pocke-img>img{width: 100%; }
+      .sideci-img{
+        background-color: #000000;
+        padding-left: 10px;
+        padding-top: 10px;
+        text-align: center;
+      }
+      h1{text-align: center;}
+      .big{font-size: 3rem !important; font-weight: 'Ricty';}
     </style>
   </head>
   <body>
-    <textarea id="source">
+    <script src="bower_components/remark/out/remark.min.js"></script>
+    <script src="bower_components/vue/dist/vue.min.js"></script>
 
-class: center, middle
-
-# Title
-
----
-
-# Agenda
-
-1. Introduction
-2. Deep-dive
-3. ...
-
----
-
-# Introduction
-
-    </textarea>
-    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
-    </script>
     <script>
       var slideshow = remark.create();
+    </script>
+
+    <script>
+var slideshow = remark.create({
+  sourceUrl: 'slide.md',
+});
+
+new Vue({
+  el: '#vue-1',
+  data: {
+    name: "pocke",
+  },
+});
+
+
+new Vue({
+  el: '#vue-2',
+  data: {
+    todos: ['買い物', '洗濯'],
+  },
+  methods: {
+    add: function(){
+      this.todos.push("new TODO");},
+    del: function(data){
+      this.todos.$remove(data);},
+  },
+})
+
+new Vue({
+  el: '#vue-3',
+  data: { n: 1 },
+  computed: {
+    prime: function () {
+      if(this.n<2){return false};
+      var m=Math.sqrt(this.n);
+      for (var i=2;i<=m;i++){if (this.n%i===0){return false;}}
+      return true;
+    },
+  }
+})
     </script>
   </body>
 </html>
