--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         padding-left: 50px;
         padding-right: 50px;
       }
-      .remark-code, .remark-inline-code { font-family: 'Ricty';font-size: 1rem; }
+      .remark-code, .remark-inline-code, textarea{ font-family: 'Ricty';font-size: 1rem; }
       .pocke-img>img{width: 100%; }
       .sideci-img{
         background-color: #000000;
@@ -30,6 +30,7 @@
   <body>
     <script src="bower_components/remark/out/remark.min.js"></script>
     <script src="bower_components/vue/dist/vue.min.js"></script>
+    <script src="bower_components/marked/marked.min.js"></script>
 
     <script>
       var slideshow = remark.create();
@@ -70,6 +71,16 @@ new Vue({
       var m=Math.sqrt(this.n);
       for (var i=2;i<=m;i++){if (this.n%i===0){return false;}}
       return true;
+    },
+  }
+})
+
+new Vue({
+  el: '#vue-4',
+  data: {md: "# たとえば、マークダウンエディタ\n- このスライドもMarkdownで書かれています\n- Markdown最高!"},
+  computed: {
+    marked: function () {
+      return marked(this.md);
     },
   }
 })
